--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Exo+2&display=swap");
+
+html,
+body {
+  margin: 0;
+  font-family: "Exo 2", sans-serif;
+  height: 100%;
+  background: linear-gradient(
+    210deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(81, 9, 121, 1) 55%,
+    rgba(0, 212, 255, 1) 110%
+  );
+  color: #ffffff;
+  background-attachment: fixed;
+}
