--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div class="navbar">
+  <a routerLink="/">Home</a>
+
   <img src="/favicon.ico" />
+
+  <a routerLink="/list">List</a>
 </div>
 
 <div class="content">
