--- a/src/app/views/home.component.html
+++ b/src/app/views/home.component.html
@@ -1,1 +1,7 @@
-Home view!
+<input [(ngModel)]="query" (input)="searchForPokemon()" />
+<div>
+  {{ query }}
+</div>
+<div>
+  <card [pokemon]="pokemon$ | async" />
+</div>
